# mastercard-backbank

./: Cargo.toml  README.md  a.out.wasm  backbank.php  backbank.wasm  build.js  cargo.toml  commonUMDable.js  composer.json  exec.c  index.js  index.rs  jsconfig.json  lib(fetch).rs  lib.rs  libb.rs  libbb.rs  libbbb.rs  package.json  packagee.json  rollup.config.js  rollupCommonToUMD.js  rust-toolchain.toml  traverseCommons.js  webpack.config.js  wrangler.toml
.github/workflows/: main.yml
babel-preset-php/: index.js  trans.js
eglue/: Cargo.toml  lib.rs
emscripten/: index.mjs  shim.mjs
index/: mod.rs  user.rs
notes/: ReadMe.md  composer.json  init.rs  modd.rs  routescript.rs
notes/router/: api.rs  mod.rs  route.rs
notes/router/auth/: mod.rs
oauth1signer/OAuth/: OAuth.php
src/: .cf-keys  ReadMe.md  WASI.js  WASI.mjs  babelphp.mjs  browseri.js  browseri.mjs  browserify.js  commonUMDable.js  denotract.rs  dependency.js  dependency.mjs  eWAM.js  emscript.sh  emscript.txt  exec.js  exec.mjs  fileserve.js  functions.mjs  iWAM.js  iWAM.mjs  ifWAM.mjs  index.js  index.mjs  index.php  initializeWAM.js  intake.js  module.mjs  module.mjs`  require.js  require.mjs  requireNoiifeapp.js  requirecd.mjs  rollup.config.js  rollup.js  rollupCommon.js  rolluphelpers.js  rolluphelpers.mjs  shim.mjs  taubify.js  (+3 more)
src/PHP/: Makefile  ReadMe.md  XMLWriter.php  backbank.wasm  index.php
src/PHP/GNU/: ReadMe.md  m4.c
src/PHP/XMLWriter/: abstract.php  index.php  secdraft.js  secdraft.php  security.php
src/PHP/XMLWriter/security/: index.php
src/app/: index.mjs  rollup.js
src/builders/: browserify.js  package.json  rollup.config.js  rollup.js  rollup.mjs  rollupCommon.js  rollupCommon.mjs
src/dependencies/: ast.mjs  index.js  index.mjs  shim.js  shim.mjs  shimm.mjs
src/notes/: requireCarducci.js
src/requirecd/: context.js  context.mjs  index.mjs  makemap.mjs
src/requirecd/builder/: index.mjs
src/requirecd/builder/dependency/: functions.mjs  index.mjs  module.mjs
src/requirecd/dependency/: check.mjs  index.mjs  makerequire.js  module.mjs
src/requirecd/dependency/module/: functions.mjs  index.mjs  makerequire.mjs  normalize.mjs
src/requirecd/dependency/module/utils/: index.mjs  nametourl.mjs
src/requirecd/dependency/start/: help.mjs  index.mjs
src/requirecd/dependency/start/call/: plugincb.mjs
src/rollup/: helpers.mjs  index.js
src/source/: ReadMe.md  exec.c  pre.js
src/source/eglue/: Cargo.toml  ReadMe.md  awaitfm.rs  cargo.toml  index.rs  jfmast.rs  jfuture.rs  lib.rs  main.rs  pubmain.rs  readfm.rs  rollup.config.js  rust-toolchain.toml
src/source/eglue/bupkis/: dev.rs  main.rs  mod.rs
src/source/eglue/bupkis/mods/: pathify.rs
src/source/eglue/bupkis/mods/utils/: iterationforeach.rs  mod.rs
src/source/eglue/collagen/: ReadMe.md  arguments.js  jfmast.rs  lib.rs  rust-toolchain.toml
src/source/eglue/collagen/bupkis/: mod.js
src/source/eglue/collagen/marrow/jfmast/: mod.rs  moda.rs  modb.rs
src/source/eglue/mods/: iterationforeach.rs  pathify.js  pathify.rs
src/source/eglue/pub/: main.rs
src/source/eglue/pub/mods/: pathify.rs
src/source/eglue/pub/mods/utils/: iterationforeach.rs
src/source/eglue/pubmain/: dev.rs  main.rs
