[package]
edition = "2021"
name = "eglue" # "src/source/eglue"
version = "0.1.0"    # obey semver
authors = ["Nick Carducci <nmcarducci@gmail.com>"]
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
[dependencies]
# wasm-bindgen = "0.2.81" ## wasm-bindgen is useable from worker = "^" 
# web-sys = "0.3.57"
# workers-rs = "0.0.10"
# worker-build = "0.0.4"
cc = "1.0"
worker = "0.0.10"
cfg-if = "1.0.0"
# url = "2.2.2"

[dependencies.web-sys]
version = "0.3"
features = ["Response","Request", "Url" ]

[lib]
#edition = "2021"
name = "build"
path = "lib.rs"
crate-type = ["cdylib", "rlib"] # "rlib"

# https://rustwasm.github.io/docs/wasm-pack/tutorials/npm-browser-packages/template-deep-dive/cargo-toml.html

