[package]
edition = "2021"
name = "eglue" # "src/source/eglue"
version = "0.1.0"    # obey semver
authors = ["Nick Carducci <nmcarducci@gmail.com>"]
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
# [features]
# default = ["console_error_panic_hook"]
[dependencies]
# wasm-bindgen = "0.2.81" ## wasm-bindgen is useable from worker = "^" 
# web-sys = "0.3.57"
# workers-rs = "0.0.10"
# worker-build = "0.0.4"
cc = "1.0"
worker = "0.0.10"
cfg-if = "1.0.0"
# url = "2.2.2"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"

[dependencies.web-sys]
version = "0.3"
features = ["Response","Request", "Url" ]

[lib]
#edition = "2021"
path = "lib.rs"
crate-type = ["cdylib", "rlib"] # "rlib"
# name = "build"

# https://rustwasm.github.io/docs/wasm-pack/tutorials/npm-browser-packages/template-deep-dive/cargo-toml.html

