[package]
name = "eglue" # "src/source/eglue"
version = "0.1.0"    # obey semver
authors = ["Nick Carducci <nmcarducci@gmail.com>"]
[dependencies]
wasm-bindgen = "0.2"
[build-dependencies]
cc = "1.0"
bindgen = "0.53.1"
wasm-bindgen = "0.2"
[lib] #[[bin]]
name = "main"
path = "./main.rs"
crate-type = ["cdylib"] # "rlib"

# https://rustwasm.github.io/docs/wasm-pack/tutorials/npm-browser-packages/template-deep-dive/cargo-toml.html
